[gd_scene load_steps=12 format=3 uid="uid://cvtntsg168do7"]

[ext_resource type="Script" path="res://Scenes/UI/shop_screen.gd" id="1_cb10l"]
[ext_resource type="Texture2D" uid="uid://cebvr8v8iyh46" path="res://Assets/Art/Temp/Shopkeep temp.png" id="2_o25yn"]
[ext_resource type="Texture2D" uid="uid://bpsciivj2iixp" path="res://Assets/Art/Temp/Cats/ChadCat.png" id="3_h7exv"]
[ext_resource type="PackedScene" uid="uid://baeaj55y6xd38" path="res://Scenes/UI/BlankButton.tscn" id="4_xtrl7"]
[ext_resource type="Texture2D" uid="uid://dmbp5uydwdtmg" path="res://Assets/Art/Temp/Cats/eyecat.png" id="5_rs11m"]
[ext_resource type="Texture2D" uid="uid://dgkq1ee8cxrl3" path="res://Assets/Art/Temp/Cats/Gorf.png" id="6_bq43l"]
[ext_resource type="Texture2D" uid="uid://deqr6bmsmg53b" path="res://Assets/Art/Temp/Cats/maskcat.png" id="7_tw00s"]
[ext_resource type="Texture2D" uid="uid://coag40tplua1v" path="res://Assets/Art/Temp/Cats/PlagueCat.png" id="8_5d1sc"]
[ext_resource type="Texture2D" uid="uid://ti5l4qbllufo" path="res://Assets/Art/Temp/Cats/purrzerk.png" id="9_qqeyb"]
[ext_resource type="Texture2D" uid="uid://d0124ydgm3g78" path="res://Assets/Art/Temp/Cats/Void.png" id="10_qboy3"]
[ext_resource type="Texture2D" uid="uid://biaaf0qhrkdab" path="res://Assets/Art/Temp/Cats/WeirdGuy.png" id="11_10rt7"]

[node name="ShopScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cb10l")

[node name="ShopkeepTemp" type="Sprite2D" parent="."]
position = Vector2(176, 877)
scale = Vector2(-1, 1)
texture = ExtResource("2_o25yn")
region_enabled = true
region_rect = Rect2(749.436, 0, 348.564, 417.876)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 500.0

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer2"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="Panel/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(700, 230)
layout_mode = 2
text = "Placeholder Order"
autowrap_mode = 3

[node name="NextButton" parent="Panel/MarginContainer2/VBoxContainer" instance=ExtResource("4_xtrl7")]
layout_mode = 2
text = "Next"

[node name="NextButton2" parent="Panel/MarginContainer2/VBoxContainer" instance=ExtResource("4_xtrl7")]
layout_mode = 2
text = "Reset"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 820.0
offset_top = 13.0
offset_right = 882.0
offset_bottom = 114.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="one" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "1"

[node name="four" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "4"

[node name="seven" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "7"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="two" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "2
"

[node name="five" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "5"

[node name="eight" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "8"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="three" type="Button" parent="Panel/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "3
"

[node name="six" type="Button" parent="Panel/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "6"

[node name="PlagueCat" type="Sprite2D" parent="."]
visible = false
position = Vector2(1461, 825)
texture = ExtResource("8_5d1sc")

[node name="Maskcat" type="Sprite2D" parent="."]
visible = false
position = Vector2(1450, 829)
texture = ExtResource("7_tw00s")

[node name="Purrzerk" type="Sprite2D" parent="."]
visible = false
position = Vector2(1482, 781)
texture = ExtResource("9_qqeyb")

[node name="ChadCat" type="Sprite2D" parent="."]
visible = false
position = Vector2(1528, 707)
texture = ExtResource("3_h7exv")

[node name="WeirdGuy" type="Sprite2D" parent="."]
visible = false
position = Vector2(1548, 852)
texture = ExtResource("11_10rt7")

[node name="Void" type="Sprite2D" parent="."]
visible = false
position = Vector2(1486, 638)
texture = ExtResource("10_qboy3")

[node name="Gorf" type="Sprite2D" parent="."]
visible = false
position = Vector2(1456, 797)
texture = ExtResource("6_bq43l")

[node name="Eyecat" type="Sprite2D" parent="."]
visible = false
position = Vector2(1498, 784)
texture = ExtResource("5_rs11m")

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/one" to="." method="_on_one_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/four" to="." method="_on_four_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/seven" to="." method="_on_seven_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/two" to="." method="_on_two_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/five" to="." method="_on_five_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/eight" to="." method="_on_eight_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer3/three" to="." method="_on_three_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer3/six" to="." method="_on_six_pressed"]
